# discord-status-managerX

./: .gitignore  CMakeLists.txt  README.md  SERVICE.md  config.json
res/: generate_icon.py  resource.h
src/: config.cpp  config.h  discord_api.cpp  discord_api.h  discord_rpc.cpp  discord_rpc.h  main.cpp  process_monitor.cpp  process_monitor.h  service.cpp  service.h  setup_dialog.cpp  setup_dialog.h  single_instance.cpp  single_instance.h  token_extractor.cpp  token_extractor.h  token_store.cpp  token_store.h  tray_app.cpp  tray_app.h  webview_login.cpp  webview_login.h  worker.cpp  worker.h
